Add landing page and remove SCSS from components
Introduces a new landing page with dedicated components (accordion, card-benefits, card-how-works) and updates routing to use it as the default entry point. Removes all SCSS style files and their references from components and pages, consolidating styling to utility classes. Updates image assets and references for consistency, fixes typos in component names, and improves accessibility and alt text in templates.

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,8 +1,10 @@
 <div class="min-h-screen flex">
   <div class="w-1/2 flex flex-col justify-center items-center bg-crater-brown px-16 py-8">
     <div class="w-full max-w-md">
-      <img class="absolute top-6 left-8 w-32" src="../../../../../assets/img/general/TribuTico.png"
-        alt="imagenTribuTico">
+      <a routerLink="">
+        <img class="absolute top-6 left-8 w-32" src="../../../../../assets/img/general/tributico.png"
+          alt="Logo de la aplición web TribuTico" loading="eager" />
+      </a>
 
       <h2 class="text-bisque text-2xl font-bold mt-8 text-center mb-8">Bienvenido</h2>
       <p class="text-zorba mb-8 text-center">Ingresa tus credenciales para acceder a tu cuenta</p>
@@ -59,7 +61,8 @@
     </div>
   </div>
   <div class="w-1/2 flex flex-col justify-center items-center bg-isabelline">
-    <img src="../../../../assets/img/login/login.png" alt="Ilustración" class="w-50 mb-8" />
+    <img src="../../../../assets/img/login/login.png"
+      alt="Dos chicos y una chica saludando para dar la bienvenida a TribuTico" class="w-50 mb-8" />
     <p class="text-crater-brown text-center font-semibold px-8">
       Simplifica la gestión de tus impuestos y mantén el control de tus finanzas en un solo lugar. Ingresa para
       comenzar.
