--- a/src/app/pages/auth/sign-up/signup.component.html
+++ b/src/app/pages/auth/sign-up/signup.component.html
@@ -1,6 +1,8 @@
 <div class="min-h-screen flex">
   <div class="w-1/2 flex flex-col justify-center items-center bg-isabelline px-16 py-8">
-    <img src="../../../../../assets/img/signup/signup.png" alt="imagenTribuTico" class="mb-8 w-[300px] h-auto" />
+    <img src="../../../../../assets/img/signup/signup.png"
+      alt="Dos chicas y un chico saludando para dar la bienvenida a TribuTico" class="mb-8 w-72 h-auto"
+      loading="eager" />
     <p class="text-center text-crater-brown mb-8 font-bold">
       Crea tu cuenta en minutos y empieza a optimar tu gestión fiscal.<br>
       Completa tus datos y únete a nuestra comunidad.
