--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,8 +12,8 @@
         <div class="flex flex-col justify-center items-center bg-bisque rounded-md h-full w-full px-8 py-6 2xl:px-12">
             <div class="w-fit justify-end items-end">
                 <div class="flex justify-center items-center w-full">
-                    <img src=" ../../../../../assets/img/homepage/MessagesIllustration.png"
-                        alt="Ilustración de mensajes" class="w-52 2xl:w-auto mb-2" />
+                    <img src=" ../../../../../assets/img/homepage/messages-illustration.png"
+                        alt="Ilustración de mensajes" class="w-full 2xl:w-auto mb-4" loading="eager" />
                 </div>
                 <h5 class="text-crater-brown font-black mb-2 text-2xl w-full text-left">
                     NECESITAS AYUDA?<br>
