--- a/src/app/components/app-layout/elements/sidebar/sidebar.component.html
+++ b/src/app/components/app-layout/elements/sidebar/sidebar.component.html
@@ -1,7 +1,8 @@
 <div class="flex flex-col px-3 justify-between h-screen bg-crater-brown pt-5">
   <div>
     <div class="flex justify-center w-full">
-      <img class="w-40" src="../../../../../assets/img/general/tributico.png" alt="Logo de la aplición web TribuTico" />
+      <img class="w-40" src="../../../../../assets/img/general/tributico-logo.png"
+        alt="Logo de la aplición web TribuTico" />
     </div>
 
     <nav class="flex-1 space-y-2 mt-4">
