--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -2,17 +2,20 @@
   <div class="w-1/2 flex flex-col justify-center items-center bg-crater-brown px-16 py-8">
     <div class="w-full max-w-md">
       <a routerLink="">
-        <img class="absolute top-6 left-8 w-32" src="../../../../../assets/img/general/tributico.png"
+        <img class="absolute top-6 left-8 w-32" src="../../../../../assets/img/general/tributico-logo.png"
           alt="Logo de la aplición web TribuTico" loading="eager" />
       </a>
 
-      <h2 class="text-bisque text-2xl font-bold mt-8 text-center mb-8">Bienvenido</h2>
-      <p class="text-zorba mb-8 text-center">Ingresa tus credenciales para acceder a tu cuenta</p>
+      <div class="text-center mb-8">
+        <h2 class="text-bisque text-3xl mb-2 font-bold">Bienvenido</h2>
+        <p class="text-bisque">Ingresa tus credenciales para acceder a tu cuenta.</p>
+      </div>
       <form (ngSubmit)="handleLogin($event)" autocomplete="off" #frm="ngForm" class="flex flex-col space-y-4">
-        <label for="email" class="text-bisque font-semibold">Correo electrónico</label>
+        <label for="email" class="text-bisque font-semibold">Correo electrónico<span
+            class="text-burnt-umber">*</span></label>
         <input #email="ngModel" type="text"
           class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba items-center rounded-md p-2 focus:outline-none focus:border-golden-glow"
-          id="email" name="email" placeholder="nombre@correo.com" [(ngModel)]="loginForm.email" [ngClass]="{
+          id="email" name="email" placeholder="email@dominio.com" [(ngModel)]="loginForm.email" [ngClass]="{
             'border-flamenco': email.invalid && email.touched,
             'border-golden-glow': email.valid && email.touched
           }" required />
@@ -20,11 +23,12 @@
           El correo electrónico es obligatorio.
         </div>
 
-        <label for="password" class="text-bisque font-semibold">Contraseña</label>
+        <label for="password" class="text-bisque font-semibold">Contraseña<span
+            class="text-burnt-umber">*</span></label>
         <div class="relative">
           <input #password="ngModel" [type]="showPassword ? 'text' : 'password'"
             class="border-2 border-zorba bg-crater-brown text-bisque placeholder:text-zorba items-center rounded-md p-2 pr-10 focus:outline-none focus:border-golden-glow w-full"
-            id="password" name="password" placeholder="********" [(ngModel)]="loginForm.password" [ngClass]="{
+            id="password" name="password" placeholder="*********" [(ngModel)]="loginForm.password" [ngClass]="{
               'border-flamenco': password.invalid && password.touched,
               'border-golden-glow': password.valid && password.touched
             }" required />
