--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -27,7 +27,7 @@
 <ng-template #addInvoiceModal>
     <app-modal [hideFooter]="true">
         <div>
-            <app-manual-invoices-form [invoiceForm]="invoiceForm" (callSaveMethod)="saveInvoice($event)"
+            <app-manual-invoices-form [invoiceForm]="invoiceForm" [detailForm]="detailForm" [details]="details" (callSaveMethod)="saveInvoice($event)"
                 (callUpdateMethod)="updateInvoice($event)" (callCancelMethod)="cancelUpdate()" />
         </div>
     </app-modal>
