--- a/src/app/components/app-layout/app-layout.component.html
+++ b/src/app/components/app-layout/app-layout.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-1 bg-gray-50 h-screen">
+<div class="flex flex-1 bg-isabelline h-screen">
   <div class="w-72 md:flex md:w-56 md:flex-col">
-    <div class="flex flex-col flex-grow bg-white">
+    <div class="flex flex-col flex-grow bg-isabelline">
       <div class="flex-1 flex flex-col">
         <app-sidebar></app-sidebar>
       </div>
@@ -11,7 +11,7 @@
     <app-topbar></app-topbar>
 
     <main class="flex-1 overflow-y-auto h-full">
-      <div class="py-6 px-4 min-h-full flex justify-center items-center">
+      <div class="py-6 px-4 min-h-full w-full flex justify-center items-center">
         <router-outlet></router-outlet>
       </div>
     </main>
