--- a/src/app/pages/upload-invoices/upload-invoices.component.html
+++ b/src/app/pages/upload-invoices/upload-invoices.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-center items-center max-w-screen-2xl space-y-2">
+<div class="flex flex-col justify-center items-center w-full space-y-2">
     <div class="flex flex-row justify-between items-center w-full px-4">
         <h1 class="text-3xl font-bold text-crater-brown">Cargar facturas</h1>
         <button
