Refactor invoice save logic and improve form UX
Removed unused saveInvoice and saveWithUserId methods from InvoiceService and updated UploadInvoicesComponent to use the simplified save method. Improved form validation and error messages in manual invoice, reset password, and profile components, and enhanced UI consistency for form fields and buttons.

--- a/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
+++ b/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
@@ -50,7 +50,7 @@
         placeholder="Clave" />
       @if (invoiceForm.controls['key'].invalid && (invoiceForm.controls['key'].dirty ||
       invoiceForm.controls['key'].touched)) {
-      <div class="text-burnt-umber text-sm">El código es obligatorio.</div>
+      <div class="text-burnt-umber text-sm">La clave es obligatoria.</div>
       }
     </div>
   </div>
@@ -258,7 +258,7 @@
   </form>
 
   <div class="flex gap-4 justify-center">
-    <button (click)="callSave()" [disabled]="invoiceForm.invalid" type="button"
+    <button (click)="callSave()" [disabled]="invoiceForm.invalid || this.details.length == 0" ctype="button"
       class="bg-flamenco text-bisque font-bold rounded px-8 py-2 hover:bg-golden-glow hover:text-flamenco transition-colors disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-flamenco disabled:text-bisque">
       Registrar
     </button>
