--- a/src/app/pages/upload-invoices/upload-invoices.component.html
+++ b/src/app/pages/upload-invoices/upload-invoices.component.html
@@ -19,7 +19,7 @@
         <div class="p-6 rounded-md h-full w-full flex justify-center items-center bg-crater-brown"
             [ngClass]="hideImportInvoicesVar ? '' : 'max-w-4xl'">
             <app-manual-invoices-form [invoiceForm]="invoiceForm" [detailForm]="detailForm"
-                [responseScan]="ocrService.responseScan$" (callResetScanMethod)="ocrService.resetResponseScan()"
+                [responseScan]="combinedResponse" (callResetScanMethod)="resetScanResponse()"
                 (callSavedMethod)="saveInvoice($event)" />
         </div>
 
