Add changes editing

--- a/src/app/components/invoice-list/invoice-list.component.html
+++ b/src/app/components/invoice-list/invoice-list.component.html
@@ -22,10 +22,11 @@
              <!--   <td class="p-3">{{item.user?.email}}</td>-->
                 <td class="p-3">{{item.type || 'N/A'}}</td>
                 <td class="p-3 space-x-1">
-                    <!-- <button (click)="callModalAction.emit(item)" class="bg-flamenco px-2 p-0.5 rounded-md"
+                    <button (click)="callModalAction.emit(item)" class="bg-flamenco px-2 p-0.5 rounded-md"
                         type="button">
                         <span class="material-symbols-rounded text-lg text-bisque">edit</span>
                     </button>
+                     <!--
                     <button (click)="openModal(item)" class="bg-golden-glow px-2 p-0.5 rounded-md" type="button">
                         <span class="material-symbols-rounded text-lg text-crater-brown">delete</span>
                     </button>-->
